ConfigHelper removed, minor adjustments